--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2867,7 +2867,7 @@ body {
 .cid-qtBSN5jjMa {
   padding-top: 120px;
   padding-bottom: 90px;
-  background-image: url("../../../assets/images/how-it-works-bg-1660x7155.jpg");
+  background-image: url("../../../assets/images/contact.jpg");
 }
 .cid-qtBTxpRYz8 {
   padding-top: 90px;
